# gcn_agg

./: .gitignore  Cargo.toml  README.md  main.py
configs/: default.toml
configs/optional_configs/: cora.toml  dense.toml
configs/user_configs/: config.toml
src/: gcn_result.rs  graph.rs  lib.rs  main.rs  node_features.rs  settings.rs  sliding_window.rs
src/accelerator/: agg_buffer.rs  aggregator.rs  component.rs  input_buffer.rs  mem_interface.rs  mlp.rs  mod.rs  output_buffer.rs  req.rs  sliding_window.rs  sparsifier.rs  sparsify_buffer.rs  system.rs  temp_agg_result.rs  window_id.rs
src/utiles/: connect.rs
test_data/: graph.txt
tests/: integeration_test.rs
