[package]
edition = "2021"
name = "gcn_agg"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-as-inner = "0.3"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
ramulator_wrapper = "0.0.2"

config = "0.11"
serde= {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = "0.4"
simple_logger = "2.1"
glob = "0.3"
[dev-dependencies]
